# niche-radar-alpha

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  enhancement_prompt.md  pyproject.toml  refactor_prompt.md  requirements.txt  spec.md  x.md
.claude/: settings.json
.codegraph/: daemon.pid
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.ralph/: prd.json
agents/: __init__.py  llm.py  models.py  pipeline.py  prompts.py  scorer.py
docs/: ARCHITECTURE.md  MONETIZATION.md  PRODUCT.md  agent-pipeline.md  prd.md  status.md  verification-log.md
docs/adr/: ADR-001-sqlite-default-store.md  ADR-002-multi-backend-collector-fallback.md  ADR-003-eight-agent-pipeline.md  ADR-004-adopt-agentic-engineering-doc-chain.md  ADR-005-yt-dlp-youtube-transcripts.md  ADR-006-reddit-multi-backend-jina-tier.md  ADR-007-xiaohongshu-jina-tier.md  ADR-008-linkedin-public-jina-tier.md  ADR-009-xiaoyuzhou-jina-no-whisper.md  README.md
docs/enhancement/: product-enhancement-0524.md
docs/integrations/: last30days-integration-plan.md
docs/plans/: implementation-plan.md
docs/sample-reports/: sample-report-api-monitor.md  sample-report-brain-fog-planner.md
docs/spec/: README.md  analysis-pipeline.md  api.md  collectors.md  storage.md
eval/: golden_set.json
eval/fixtures/: a1_responses.json
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
niche_radar/: __init__.py  __main__.py  config.py  scheduler.py
niche_radar/agents/: __init__.py  aggregate.py  clustering.py  llm_config.py  models.py  (+8 more)
prompt_packs/: indie_hacker.yaml  service_business.yaml  vc_scout.yaml
tests/: conftest.py  test_cli.py  test_config.py  test_storage.py
(+192 files in other folders)
