[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niche-radar"
version = "0.1.0"
description = "Automated trend-intelligence pipeline for niche opportunity discovery"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic-settings>=2.0,<3.0",
    "structlog>=23.0,<25.0",
    "tenacity>=8.0,<10.0",
    "python-dotenv>=1.0,<2.0",
    "fastapi>=0.109,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "praw>=7.7,<8.0",
    "twikit>=2.0,<3.0",
    "tweepy>=4.14,<5.0",
    "trendspyg>=0.1",
    "haxor>=1.2,<2.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "scrapetube>=2.5,<3.0",
    "openai>=1.0,<2.0",
    "anthropic>=0.20,<1.0",
    "apscheduler>=3.10,<4.0",
    "Jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "responses>=0.23,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["niche_radar*"]
